# yeogi-md-editor

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  preview.html  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: accessibility-reviewer.md  design-system-guardian.md  frontend-architect.md  perf-reviewer.md  repo-explorer.md
.claude/commands/: implement-screen.md  plan-ui-change.md  review-ui.md  verify-app.md
.claude/hooks/: block-risky-bash.sh  protect-files.sh  reinject-context.sh  verify-final-state.sh
.claude/rules/: 00-operating-guardrails.md  10-ui-architecture.md  20-design-system-and-accessibility.md  30-state-data-and-ux-states.md  40-testing-and-evidence.md  50-performance-and-quality.md
.github/workflows/: ci.yml  pages.yml  release.yml  stats.yml
docs/: ci-signing.md  releasing.md  yeogi-md-editor-journey.md
docs/claude-code/: CONTEXT_MAP.md  (+6 more)
scripts/: api-push.py  create-apple-signing-cert.sh  release-build.sh  release-stats.sh
site/: index.html  robots.txt  sitemap.xml  style.css
src/: App.test.tsx  App.tsx  index.css  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/resources/: welcome.md
src-tauri/src/: commands.rs  fs.rs  lib.rs  main.rs  menu.rs  types.rs  watcher.rs
src-tauri/src/lib/ipc/: types.ts
src-tauri/tests/: fs_create_rename.rs  fs_list.rs  fs_read.rs  fs_write.rs  watcher_basic.rs
(+154 files in other folders)
